--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -11,19 +11,19 @@
 
 .navbar{
     padding-top:14px;
-    padding-bottom:30px;
+    padding-bottom:18px;
     .nav-item{
         margin-left:54px;
         @include fonts('inter',16px,400,$scolor);
         
         a{
             color:$scolor;
-            transition:all ease-out 0.2s;
-            -webkit-transition:all ease-out 0.2s;
-            -moz-transition:all ease-out 0.2s;
-            -ms-transition:all ease-out 0.2s;
-            -o-transition:all ease-out 0.2s;
-        }
+            transition:all linear 0.2s;
+            -webkit-transition:all linear 0.2s;
+            -moz-transition:all linear 0.2s;
+            -ms-transition:all linear 0.2s;
+            -o-transition:all linear 0.2s;
+}
         a:hover{
             @include fonts('inter',16px,600,$hovercolor);
             
@@ -50,10 +50,10 @@
                -ms-border-radius:50%;
                -o-border-radius:50%;
                right:0px;
-               top:2px;
+               top:2px; 
                @include fonts('inter',10px,400,$pcolor);
                
-}
+            }
        }
        .search{
            color:$hovercolor;
