--- a/sass/variables/_background.scss
+++ b/sass/variables/_background.scss
@@ -3,3 +3,10 @@ $catbg:#FAFAFA;
 $productbg:#969696;
 $flashbg:#F8F8F8;
 $btnbg:#F47606;
+$shopbg:#477018;
+$facebook:#395185;
+$twitter:#55ACEE;
+$pinterest:#FF0000;
+$dribble:#F23F7E;
+$white:#FFFFFF;
+$foot-back:#373C33;
