--- a/sass/components/_flash.scss
+++ b/sass/components/_flash.scss
@@ -39,6 +39,24 @@
                 }
             }
         }
+        ul#counter {
+            list-style: none;
+            margin: 50px 0;
+            padding: 0;
+            display: block;
+        }
+          
+        ul#counter li { display: inline-block; }
+          
+        ul#counter li span {
+            @include fonts('inter',36px,700,$scolor);
+            padding-left:16px;
+            margin-right:67px;
+        }
+            
+        ul#counter li p {
+            @include fonts('inter',28px,500,$scolor);
+        }
         
     }
 }
