--- a/css/style.css
+++ b/css/style.css
@@ -1495,4 +1495,76 @@ footer .news form button {
   font-weight: 600;
   color: #000000;
 }
+
+#home-about {
+  background: url(../images/about-bg.png) no-repeat center/cover;
+  padding-top: 115px;
+  padding-bottom: 115px;
+}
+
+#home-about .about-content h3 {
+  font-family: "inter";
+  font-size: 35px;
+  font-weight: 700;
+  color: #282828;
+}
+
+#home-about .about-content p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #282828;
+}
+
+#founder {
+  padding-top: 76px;
+  padding-bottom: 130px;
+}
+
+#founder .founder-image {
+  padding-top: 65px;
+}
+
+#founder .founder-details h6 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 500;
+  color: #676767;
+}
+
+#founder .founder-details h3 {
+  font-family: "inter";
+  font-size: 35px;
+  font-weight: 700;
+  color: #282828;
+  padding-right: 100px;
+  padding-bottom: 30px;
+}
+
+#founder .founder-details p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 30px;
+}
+
+#founder .founder-details .founder-data {
+  padding-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#founder .founder-details .founder-data .name {
+  padding-left: 20px;
+}
+
+#founder .founder-details .founder-data .name h5 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 600;
+  color: #282828;
+  line-height: 30px;
+}
 /*# sourceMappingURL=style.css.map */
