added tree section on about page

--- a/sass/components/_founder.scss
+++ b/sass/components/_founder.scss
@@ -1,6 +1,10 @@
+/* =============================
+            founder css starts
+ ================================*/
+ 
 #founder{
     padding-top:76px;
-    padding-bottom:130px;
+    // padding-bottom:130px;
     .founder-image{
         padding-top:65px;
     }
