--- a/sass/components/_home-about.scss
+++ b/sass/components/_home-about.scss
@@ -1,3 +1,7 @@
+/* =============================
+    home-about css starts
+ ================================*/
+
 #home-about{
     background:url(../images/about-bg.png)no-repeat center / cover;
     padding-top:115px;
