--- a/sass/components/_product.scss
+++ b/sass/components/_product.scss
@@ -1,3 +1,7 @@
+/* =============================
+        product css starts
+ ================================*/
+
 #product{
     padding-bottom:130px;
     .top{
