--- a/css/style.css
+++ b/css/style.css
@@ -1374,6 +1374,9 @@ footer .news form button {
   margin-left: 30px;
 }
 
+/* =============================
+        product css starts
+ ================================*/
 #product {
   padding-bottom: 130px;
 }
@@ -1496,6 +1499,9 @@ footer .news form button {
   color: #000000;
 }
 
+/* =============================
+    home-about css starts
+ ================================*/
 #home-about {
   background: url(../images/about-bg.png) no-repeat center/cover;
   padding-top: 115px;
@@ -1516,9 +1522,11 @@ footer .news form button {
   color: #282828;
 }
 
+/* =============================
+            founder css starts
+ ================================*/
 #founder {
   padding-top: 76px;
-  padding-bottom: 130px;
 }
 
 #founder .founder-image {
@@ -1566,5 +1574,271 @@ footer .news form button {
   font-weight: 600;
   color: #282828;
   line-height: 30px;
+}
+
+/* =============================
+            tree css starts
+ ================================*/
+#tree {
+  padding-top: 120px;
+  margin-bottom: 460px;
+}
+
+#tree .background {
+  margin-top: -147px;
+  position: relative;
+}
+
+#tree .background .t-bg {
+  position: absolute;
+  top: 190px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+#tree .background .tree-item {
+  text-align: center;
+  position: relative;
+}
+
+#tree .background .tree-item .item-image .one {
+  position: absolute;
+  top: 145px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  z-index: -1;
+}
+
+#tree .background .tree-item .item-image .two {
+  position: absolute;
+  top: 128px;
+  left: 7%;
+  transform: rotate(-3deg);
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  z-index: -1;
+}
+
+#tree .background .tree-item .item-image .three {
+  position: absolute;
+  top: 166px;
+  left: 17%;
+  transform: rotate(23deg);
+  -webkit-transform: rotate(23deg);
+  -moz-transform: rotate(23deg);
+  -ms-transform: rotate(23deg);
+  -o-transform: rotate(23deg);
+  z-index: -1;
+}
+
+#tree .background .tree-item .item-image .four {
+  position: absolute;
+  top: 145px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  z-index: -1;
+}
+
+#tree .background .tree-item .item-image .second-image {
+  width: 142px;
+  height: 142px;
+  text-align: center;
+  line-height: 142px;
+  background-color: #FBFBFB;
+  position: absolute;
+  top: 168px;
+  left: 23.9%;
+  transform: rotate(77deg);
+  -webkit-transform: rotate(77deg);
+  -moz-transform: rotate(77deg);
+  -ms-transform: rotate(77deg);
+  -o-transform: rotate(77deg);
+  border-radius: 10px;
+  z-index: 1;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+#tree .background .tree-item .item-image .second-image .tree-one {
+  transform: rotate(-76deg);
+  -webkit-transform: rotate(-76deg);
+  -moz-transform: rotate(-76deg);
+  -ms-transform: rotate(-76deg);
+  -o-transform: rotate(-76deg);
+}
+
+#tree .background .tree-item .item-image .second-image-2 {
+  width: 190px;
+  height: 190px;
+  text-align: center;
+  line-height: 190px;
+  background-color: #FBFBFB;
+  position: absolute;
+  top: 149px;
+  left: 15.9%;
+  transform: rotate(-9deg);
+  -webkit-transform: rotate(-9deg);
+  -moz-transform: rotate(-9deg);
+  -ms-transform: rotate(-9deg);
+  -o-transform: rotate(-9deg);
+  border-radius: 10px;
+  z-index: 1;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+#tree .background .tree-item .item-image .second-image-2 .tree-two {
+  transform: rotate(10deg);
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  -o-transform: rotate(10deg);
+}
+
+#tree .background .tree-item .item-image .second-image-3 {
+  width: 142px;
+  height: 142px;
+  text-align: center;
+  line-height: 142px;
+  background-color: #FBFBFB;
+  position: absolute;
+  top: 192px;
+  left: 25.9%;
+  transform: rotate(100deg);
+  -webkit-transform: rotate(100deg);
+  -moz-transform: rotate(100deg);
+  -ms-transform: rotate(100deg);
+  -o-transform: rotate(100deg);
+  border-radius: 10px;
+  z-index: 1;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+#tree .background .tree-item .item-image .second-image-3 .tree-three {
+  transform: rotate(-102deg);
+  -webkit-transform: rotate(-102deg);
+  -moz-transform: rotate(-102deg);
+  -ms-transform: rotate(-102deg);
+  -o-transform: rotate(-102deg);
+}
+
+#tree .background .tree-item .item-image .second-image-4 {
+  width: 142px;
+  height: 142px;
+  text-align: center;
+  line-height: 142px;
+  background-color: #FBFBFB;
+  position: absolute;
+  top: 168px;
+  left: 23.9%;
+  transform: rotate(77deg);
+  -webkit-transform: rotate(77deg);
+  -moz-transform: rotate(77deg);
+  -ms-transform: rotate(77deg);
+  -o-transform: rotate(77deg);
+  border-radius: 10px;
+  z-index: 1;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+#tree .background .tree-item .item-image .second-image-4 .tree-four {
+  transform: rotate(-80deg);
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -ms-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+}
+
+#tree .background .tree-item-text {
+  text-align: center;
+  position: absolute;
+  top: 368px;
+  left: 0;
+}
+
+#tree .background .tree-item-text h3 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 600;
+  color: #000000;
+  padding-bottom: 10px;
+}
+
+#tree .background .tree-item-text p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 28px;
+}
+
+#tree .background .tree-item-text-2 {
+  text-align: center;
+  position: absolute;
+  top: 406px;
+  left: 0;
+}
+
+#tree .background .tree-item-text-2 h3 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 600;
+  color: #000000;
+  padding-bottom: 10px;
+}
+
+#tree .background .tree-item-text-2 p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 28px;
+}
+
+#tree .background .tree-item-text-3 {
+  text-align: center;
+  position: absolute;
+  top: 413px;
+  left: 0;
+}
+
+#tree .background .tree-item-text-3 h3 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 600;
+  color: #000000;
+  padding-bottom: 10px;
+}
+
+#tree .background .tree-item-text-3 p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 28px;
 }
 /*# sourceMappingURL=style.css.map */
