--- a/css/style.css
+++ b/css/style.css
@@ -1822,7 +1822,7 @@ footer .news form button {
 #tree .background .tree-item-text-3 {
   text-align: center;
   position: absolute;
-  top: 413px;
+  top: 406px;
   left: 0;
 }
 
@@ -1840,5 +1840,119 @@ footer .news form button {
   font-weight: 400;
   color: #676767;
   line-height: 28px;
+}
+
+/* =============================
+        choose css starts
+ ================================*/
+#choose {
+  padding-bottom: 130px;
+}
+
+#choose .heading-text h5 {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 500;
+  color: #676767;
+  line-height: 30px;
+}
+
+#choose .heading-text h2 {
+  font-family: "inter";
+  font-size: 35px;
+  font-weight: 700;
+  color: #282828;
+  padding-right: 700px;
+  padding-bottom: 15px;
+}
+
+#choose .heading-text p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 30px;
+  padding-right: 545px;
+  padding-bottom: 55px;
+}
+
+#choose .different-tab ul {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#choose .different-tab .nav-tabs {
+  border: none;
+}
+
+#choose .different-tab .nav-tabs button {
+  width: 100%;
+  padding: 20px 96px;
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 400;
+  color: #676767;
+  display: block ruby;
+}
+
+#choose .different-tab .nav-tabs .nav-item.show .nav-link, #choose .different-tab .nav-tabs .nav-link.active {
+  border: 1px solid #F47606;
+  background-color: #F47606;
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 400;
+  color: #FFFFFF;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
+#choose .different-tab .nav-tabs .nav-link:focus, #choose .different-tab .nav-tabs .nav-link:hover {
+  border: 1px solid transparent;
+}
+
+#choose .different-content .ready {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 500;
+  color: #676767;
+  line-height: 30px;
+}
+
+#choose .different-content h4 {
+  font-family: "inter";
+  font-size: 25px;
+  font-weight: 700;
+  color: #282828;
+  padding-bottom: 20px;
+}
+
+#choose .different-content p {
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 30px;
+  padding-right: 150px;
+  padding-bottom: 20px;
+}
+
+#choose .different-content ul {
+  list-style: disc;
+  color: #676767;
+}
+
+#choose .different-content ul li {
+  padding-right: 180px;
+  margin-bottom: 10px;
+  font-family: "inter";
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  line-height: 30px;
 }
 /*# sourceMappingURL=style.css.map */
